# Engine-2023

./: .gitignore  CMakeLists.txt  READ.ME  README.md  deploy.bat
assets/geometry/: box.fbx  icosphere.fbx
assets/models/store/: sphere.json  testModel.json
assets/shaders/agnostic/general/: general.frag  general.vert
assets/shaders/agnostic/quad/: quad.frag  quad.vert
assets/shaders/glsl/: collision.frag  general.frag  general.vert  generalInstanced.frag  generalInstanced.vert  object_lookup.frag  tiny.frag  tiny.vert
assets/shaders/spv/: compile.bat
core/: Base.h  Core.cpp  Core.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Layer.h  Object.cpp  Object.h  Performance.cpp  Performance.h  Tinker.h  Transform.cpp  Transform.h  Window.cpp  Window.h
engine/: AssetManager.cpp  AssetManager.h  Engine.cpp  Engine.h  FileStructure.cpp  FileStructure.h  Object.cpp  Object.h  Scene.cpp  Scene.h
engine/components/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Components.h  Geometry.cpp  Geometry.h  IMGuiComponents.cpp  IMGuiComponents.h  Material.cpp  Material.h  Model.cpp  Model.h  Terrain.cpp  Terrain.h
engine/components/GUIEditor/: ImageButton.cpp  ImageButton.h
engine/components/colliders/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Collider.cpp  Collider.h  Octree.cpp  Octree.h
engine/components/meshes/: CollisionMesh.cpp  CollisionMesh.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h
engine/layers/: CollisionLayer.cpp  CollisionLayer.h  GraphicsLayer.cpp  GraphicsLayer.h  GraphicsLayer2.h  IMGuiLayer.cpp  IMGuiLayer.h  InteractionLayer.cpp  InteractionLayer.h  Layer.cpp  Layer.h  PhysicsLayer.cpp  PhysicsLayer.h  WindowLayer.cpp  WindowLayer.h
engine/layers/graphics/: GraphicsCapabilities.h  GraphicsFlag.h  GraphicsLayerOpenGL.cpp  GraphicsLayerOpenGL.h
engine/layers/graphics/api/: API_DirectX.cpp  API_DirectX.h  API_OpenGL.cpp  API_OpenGL.h  GraphicsAPI.cpp  GraphicsAPI.h  RenderingConfig.h
engine/layers/graphics/renderers/: Renderer.cpp  Renderer.h
engine/loaders/: AssetLoader.cpp  AssetLoader.h
engine/rendering/: GPUInfo.h  GraphicsAPI.cpp  GraphicsLayer.cpp  GraphicsLayer.h  WindowLayer.cpp  WindowLayer.h
engine/rendering/graphics/: BaseBuffer.cpp  BaseBuffer.h  BufferObject.h  GPULayout.cpp  GPULayout.h  GraphicsFlag.h  IndexBuffer.cpp  IndexBuffer.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexAttribute.cpp  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h
engine/rendering/graphics/api/: API_DirectX.cpp  API_DirectX.h  API_OpenGL.cpp  API_OpenGL.h  API_Vulkan.cpp  API_Vulkan.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsBehaviour.cpp  GraphicsBehaviour.h  GraphicsInterfaceReferenceObject.cpp  GraphicsInterfaceReferenceObject.h  HasGraphicsAPI.cpp  HasGraphicsAPI.h  OpenGLReferenceObject.cpp  OpenGLReferenceObject.h
engine/rendering/graphics/buffers/: BaseBuffer.cpp  BaseBuffer.h  BufferContainer.cpp  BufferContainer.h  BufferObject.cpp  BufferObject.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
engine/rendering/graphics/shader/: Shader.cpp  ShaderProgram.cpp  ShaderProgram.h
engine/scene/: Scene.h
engine/scene/components/: Component.h  Material.cpp  Model.cpp  Model.h
engine/scene/components/meshes/: Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h
engine/utility/: Utilities.h
sandbox/: DemoScene.h  main.cpp
tests/: CMakeLists.txt  primary_tests.cpp
